third_party/move/tools/move-decompiler/tests/control-flow-recovery/noexit_loops.exp
module 0x99::noexit_loops {
    struct R {
    }
    fun bar(_x: u64) {
        ()
    }
    fun baz(_: &u64) {
        ()
    }
    fun f1() {
        let _v0 = 0;
        loop _v0 = _v0 + 1
    }
    fun f10() {
        loop continue
    }
    fun f11() {
        loop continue
    }
    fun f12() {
        ()
    }
    fun f13(cond: bool) {
        let _v0;
        if (cond) _v0 = 0 else _v0 = 1;
        let _v1 = _v0 + 2;
        let _v2 = 1 + _v1;
        loop continue
    }
    fun f14(p: bool, q: bool) {
        if (p) {
            if (q) loop continue};
    }
    fun f15() {
        let _v0 = 0;
        _v0 = _v0 + 1;
    }
    fun f16() {
        loop continue
    }
    fun f2(): u64 {
        let _v0 = 1 + 1;
        loop _v0 = _v0 + 1
    }
    fun f3(): u64 {
        let _v0 = 1;
        loop {
            let _v1 = foo(_v0);
            _v0 = _v0 + _v1;
            continue
        }
    }
    fun foo(x: u64): u64 {
        x + 1
    }
    fun f4(): R {
        loop continue
    }
    fun f5(): u64 {
        loop continue
    }
    fun f6() {
        loop continue
    }
    fun f7(): R {
        loop continue
    }
    fun f8() {
        loop continue
    }
    fun f9() {
        loop continue
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot return nothing from a function with result type `u64`
   ┌─ noexit_loops.move:47:9
   │
47 │ ╭         loop {
48 │ │             let _v1 = foo(_v0);
49 │ │             _v0 = _v0 + _v1;
50 │ │             continue
51 │ │         }
   │ ╰─────────^

error: cannot return nothing from a function with result type `R`
   ┌─ noexit_loops.move:57:9
   │
57 │         loop continue
   │         ^^^^^^^^^^^^^

error: cannot return nothing from a function with result type `u64`
   ┌─ noexit_loops.move:60:9
   │
60 │         loop continue
   │         ^^^^^^^^^^^^^

error: cannot return nothing from a function with result type `R`
   ┌─ noexit_loops.move:66:9
   │
66 │         loop continue
   │         ^^^^^^^^^^^^^
